# bark

./: .gitmodules  README.md  readme.md
.github/: FUNDING.yml
.github/workflows/: beta_compile.yaml  web.yml
bark_web/: README.md  pubspec.yaml  release.bat  release.sh
bark_web/.github/: FUNDING.yml
bark_web/.github/workflows/: beta_compile.yaml
bark_web/android/app/: build.gradle
bark_web/ios/Runner/: Info.plist
bark_web/lib/: bark_web.dart  main.dart  main_debug.dart
bark_web/lib/core/: core.dart
bark_web/lib/flutter/: flutter.dart  image_flutter.dart
bark_web/lib/language/: language.dart  language_app.dart  language_code_type.dart
bark_web/lib/page/: chat.dart  home.dart  page.dart  setting.dart  sign.dart  sign_o_auth.dart
bark_web/lib/theme/: dark_mode_theme.dart  normal_mode_theme.dart  theme.dart
bark_web/lib/widget/: floating_bar_widget.dart  widget.dart
bark_web/linux/: CMakeLists.txt  my_application.cc
bark_web/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
bark_web/macos/Flutter/: GeneratedPluginRegistrant.swift
bark_web/macos/Runner.xcodeproj/: project.pbxproj
bark_web/macos/packagex/: .gitignore
bark_web/release/: .dockerignore  .gitignore  Dockerfile
bark_web/test/: widget_test.dart
bark_web/web/: index.html  manifest.json
bark_web/windows/: CMakeLists.txt
bark_web/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
bark_web/windows/runner/: Runner.rc  main.cpp
native_lib/: CMakeLists.txt  bark.cpp  readme.md
package/bark/: README.md  pubspec.yaml
package/bark/lib/: bark.dart  bark_core.dart
package/bark_dart/: README.md  activate.sh  analysis_options.yaml  pubspec.yaml
package/bark_dart/test/: bark_dart_test.dart
package/bark_flutter/: .metadata  README.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
package/bark_flutter/android/: build.gradle  settings.gradle
package/bark_flutter/example/: README.md  pubspec.yaml
package/bark_flutter/ios/: bark_flutter.podspec
package/bark_flutter/linux/: CMakeLists.txt
package/bark_flutter/src/: CMakeLists.txt  bark.cpp
(+56 files in other folders)
